[gd_scene load_steps=5 format="3"]

[ext_resource type="Script" path="res://scripts/controls_manager.gd" id="1_4b8dj"]
[ext_resource type="Texture2D" path="res://assets/sprites/control_left.svg" id="2_8qvd1"]
[ext_resource type="Texture2D" path="res://assets/sprites/control_right.svg" id="3_5j7wa"]
[ext_resource type="Texture2D" path="res://assets/sprites/control_jump.svg" id="4_ibbq3"]

[node name="Controls" type="CanvasLayer"]
script = ExtResource("1_4b8dj")

[node name="LeftButton" type="TextureButton" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -30.0
grow_vertical = 0
texture_normal = ExtResource("2_8qvd1")
stretch_mode = 0

[node name="RightButton" type="TextureButton" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_5j7wa")
stretch_mode = 0

[node name="JumpButton" type="TextureButton" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -150.0
offset_right = 60.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_ibbq3")
stretch_mode = 0

[node name="HelpLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 67.0
grow_horizontal = 2
text = "Tap left/right side of screen
to jump in that direction"
horizontal_alignment = 1
